welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
   		avance()
                      ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
		recule()
                      ^